--- a/views/public/html/edit-c-document.html
+++ b/views/public/html/edit-c-document.html
@@ -658,6 +658,10 @@
                                 <label for="document_files">Document Files:</label>
                                 <input type="file" class="form-control" id="document_files" name="document_files" required>
                             </div>
+                            <div class="mb-3">
+                              <label for="expiry_date">Expiry Date:</label>
+                              <input type="date" class="form-control" id="expiry_date" name="expiry_date" required>
+                          </div>
                             <div class="">
                               <label for="stcw">STCW:</label>
                               <select class="form-control" id="stcw" name="stcw" required>
