--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -607,6 +607,7 @@
                                         <th scope="col"  style="font-size: 8px;">Document Files</th>
                                         <th scope="col"  style="font-size: 8px;">View Document Files</th>
                                         <th scope="col"  style="font-size: 8px;">STCW</th>
+                                        <th scope="col"  style="font-size: 8px;">Expiry Date</th>
                                         <!-- Add more columns if needed -->
                                         <th scope="col"  style="font-size: 8px;">Actions</th>
                                     </tr>
@@ -672,6 +673,10 @@
                                   <option value="No">No</option>
                               </select>
                           </div>
+                          <div class="mb-3">
+                            <label for="expiry_date">Expiry Date:</label>
+                            <input type="date" class="form-control" id="expiry_date" name="expiry_date" required>
+                        </div>
                           
                             <!-- End of input fields -->
                             <div class="card-footer text-end pt-0 pe-0 pb-1">
