--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -652,30 +652,30 @@
                         </div>
                             <div class="mb-3">
                                 <label for="document_number">Document Number:</label>
-                                <input type="text" class="form-control" id="document_number" name="document_number" required>
+                                <input type="text" class="form-control" id="document_number" name="document_number" >
                             </div>
                             <div class="mb-3">
                                 <label for="issue_date">Issue Date:</label>
-                                <input type="date" class="form-control" id="issue_date" name="issue_date" required>
+                                <input type="date" class="form-control" id="issue_date" name="issue_date" >
                             </div>
                             <div class="mb-3">
                                 <label for="issue_place">Issue Place:</label>
-                                <input type="text" class="form-control" id="issue_place" name="issue_place" required>
+                                <input type="text" class="form-control" id="issue_place" name="issue_place" >
                             </div>
                             <div class="mb-3">
                                 <label for="document_files">Document Files:</label>
-                                <input type="file" class="form-control" id="document_files" name="document_files" required>
+                                <input type="file" class="form-control" id="document_files" name="document_files" >
                             </div>
                             <div class="mb-3">
                               <label for="stcw">STCW:</label>
-                              <select class="form-control" id="stcw" name="stcw" required>
+                              <select class="form-control" id="stcw" name="stcw" >
                                   <option value="Yes">Yes</option>
                                   <option value="No">No</option>
                               </select>
                           </div>
                           <div class="mb-3">
                             <label for="expiry_date">Expiry Date:</label>
-                            <input type="date" class="form-control" id="expiry_date" name="expiry_date" required>
+                            <input type="date" class="form-control" id="expiry_date" name="expiry_date" >
                         </div>
                           
                             <!-- End of input fields -->
