--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -624,8 +624,8 @@
                         <div class="card">
                             <h5 class="card-header text-center">View Candidate</h5>
                             <div class="card-body">
-                              <div class="btn btn-primary mb-3"> <span class="fw-bolder">Candidate Id : </span> <span  id="memId" value=""></span> </span></div><span>Created By :<span id="creator" class="badge bg-secondary text-white"></span></span>
-
+                              <div class="btn btn-primary mb-3"> <span class="fw-bolder">Candidate Id : </span> <span  id="memId" value=""></span> </span></div>                               <span class="float-end ms-3 badge bg-secondary p-2"> Edited By : <span id="editor" class=" "></span></span>
+                              <span class="float-end bg-primary badge p-2"> Created By : <span id="creator" class=""></span></span>
                                 <!-- Add your candidate information display here -->
                                 <div id="contentContainer" class="btn-group d-flex flex-wrap justify-content-center">
                                   <button type="button" class="btn btn-primary  mb-2" onclick="loadContent('personal')">Personal</button>
