--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -831,7 +831,7 @@
     const candidateId = urlParams.get('memId');
     
     if (candidateId) {
-      window.location.href = `./view-candidate.html?memId=${candidateId}`;
+        window.location.href = './view-candidate.html';
     } else {
         console.error('Candidate ID not found in URL parameters');
     }
