--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -711,11 +711,9 @@ function exportToExcel(table, status) {
   XLSX.writeFile(wb, `${status}_data.xlsx`);
 }
 function viewCandidate(candidateId) {
-    // Construct the URL with candidateId as a query parameter
-    const url = `./view-candidate.html?memId=${candidateId}`;
-    
-    // Open the URL in a new tab
-    window.open(url, '_blank');
+    localStorage.setItem('memId', candidateId);
+    // Open the link in a new window
+    window.open('./view-candidate.html', '_blank');
 }
 
 
