--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -710,10 +710,10 @@ function exportToExcel(table, status) {
   const wb = XLSX.utils.table_to_book(table);
   XLSX.writeFile(wb, `${status}_data.xlsx`);
 }
-function viewCandidate(candidateId) {
-    localStorage.setItem('memId', candidateId);
-    // Open the link in a new window
-    window.open('./view-candidate.html', '_blank');
+function viewCandidate(id) {
+    // Add your view logic here
+    window.open(`./view-candidate.html?id=${id}`, '_blank');
+
 }
 
 
