--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1129,6 +1129,9 @@
                                 
                                             <div class="table-responsive text-center">
                                                 <table id="hospitalTable" class="table table table-bordered table-striped"  style="font-size: 12px;">
+                                                  <div id="searchContainer" class="mt-3">
+                                                    <input type="text" id="medicalSearchInput" class="form-control" placeholder="Search medicals...">
+                                                </div>
                                                     <thead>
                                                         <tr>
                                                           <th scope="col" style="font-size: 8px;">S.no</th>
