--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -659,16 +659,16 @@
                                           <div class="col-md-6 mt-0">
                                               <label for="status" class="form-label">Status</label>
                                               <select id="status" name="status" class="form-select" >
-                                                  <option value="active">Active</option>
-                                                  <option value="inactive">Inactive</option>
+                                                  <option value="1">Active</option>
+                                                  <option value="0">Inactive</option>
                                               </select>
                                           </div>
                                           <div class="col-md-6">
                                               <label for="reemploymentStatus" class="form-label">Re-Employment</label>
                                               <select id="reemploymentStatus" name="reemploymentStatus" class="form-select">
                                                   <option value="" default selected disabled>-- Select NTBR --</option>
-                                                  <option value="notReemployedByNautilus">Not to be re-employed by Nautilus</option>
-                                                  <option value="notReemployedByOwnersClients">Not to be re-employed by the owners/clients</option>
+                                                  <option value="0">Not to be re-employed by Nautilus</option>
+                                                  <option value="1">Not to be re-employed by the owners/clients</option>
                                               </select>
                                           </div>
                                       </div>
